<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="@drawable/books"
    tools:context=".DodajKsiazke">

    <TextView
        android:id="@+id/za"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/za"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typ" />

    <EditText
        android:id="@+id/tytul"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/tytul"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/typ"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tytul" />

    <EditText
        android:id="@+id/extraInfo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/info"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horrorCheck" />

    <CheckBox
        android:id="@+id/fantastykaCheck"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:text="@string/fantastyka"
        app:layout_constraintEnd_toStartOf="@+id/sensacyjneCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/za" />

    <CheckBox
        android:id="@+id/kryminalCheck"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="54dp"
        android:text="@string/kryminal"
        app:layout_constraintEnd_toStartOf="@+id/romansCheck"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fantastykaCheck" />

    <CheckBox
        android:id="@+id/horrorCheck"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="54dp"
        android:text="@string/horror"
        app:layout_constraintEnd_toStartOf="@+id/inneCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kryminalCheck" />

    <CheckBox
        android:id="@+id/sensacyjneCheck"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:text="@string/sensacyjne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fantastykaCheck"
        app:layout_constraintTop_toBottomOf="@+id/za" />

    <CheckBox
        android:id="@+id/romansCheck"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:text="@string/romans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kryminalCheck"
        app:layout_constraintTop_toBottomOf="@+id/sensacyjneCheck" />

    <CheckBox
        android:id="@+id/inneCheck"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="55dp"
        android:text="@string/inne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horrorCheck"
        app:layout_constraintTop_toBottomOf="@+id/romansCheck" />

    <Button
        android:id="@+id/zatwierdzPrzycisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:text="@string/zatwierdz"
        app:layout_constraintEnd_toStartOf="@+id/cofnijPrzycisk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <Button
        android:id="@+id/cofnijPrzycisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:text="@string/cofnij"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zatwierdzPrzycisk"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Miejscowosc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extraInfo" />

</android.support.constraint.ConstraintLayout>